# consale

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  billsContext.jsx  db.jsx  global.css  langContext.jsx  stockContext.jsx  styles.css  userContext.jsx
src-tauri/: .env  Cargo.toml  salesData.json  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/assets/: 41-60fb05b0a85fa.psd
src/layout/FilterComponent/: FilterComponent.css  FilterComponent.jsx
src/layout/cards/AccCard/: AccCard.css
src/layout/cards/BillCard/: BillCard.css  BillCard.jsx
src/layout/popups/AccPop/: AccPop.css  AccPop.jsx
src/layout/popups/AddItemPop/: AddItemPop.css  AddItemPop.jsx  AddItemPop1.jsx  AddItemPop2.js  AddItemPop22.jsx
src/layout/popups/AddPop/: AddPop.css
src/layout/popups/BillPop/: BillPop.css  BillPop.jsx
src/layout/popups/CountRestoredPop/: CountRestoredPop.css  CountRestoredPop.jsx  CountRestoredPop11.jsx
src/layout/popups/DelItemPop/: DelItemPop.css  DelItemPop.jsx
src/layout/popups/ItemPop/: ItemPop.css  ItemPop.jsx
src/layout/popups/ItemToBill/: ItemToBill.css  ItemToBill.jsx
src/layout/popups/SaveBillPop/: SaveBillPop copy.jsx  SaveBillPop.css  SaveBillPop.jsx
src/layout/popups/printPop/: PrintPop.css  PrintPop.jsx
src/routes/AddBill/: AddBill.css  AddBill.jsx  AddBill22.jsx  ControllableStates.jsx
src/routes/Dashboard/: Dashboard.css  Dashboard.jsx
src/routes/Login/: Login.jsx
src/routes/Start/: Start.css  Start.jsx
src/routes/Stock/: Stock.css  Stock.jsx  Stock1.jsx  Stock11.jsx  Stock2.jsx  Stock22.jsx
(+3 files in other folders)
